--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,12 +4,12 @@
 
 {{ define "content" }}
 	<p> 
-		<b>Name</b> = {{ .Name }} <br>
-		<b>IPv4</b> = {{ .IPv4 }} <br>
-		<b>Port</b> = {{ .Port }} <br> 
-		<b>Info</b> = 
 		<form name="INFO" method="POST" action="/profile">
-			<textarea type="text" name="info" readonly rows="5" cols="30">{{ .Info }}</textarea> <br>
+			<b>Name</b> = {{ .Name }} <br>
+			<b>IPv4</b> = {{ .IPv4 }} <br>
+			<b>Port</b> = {{ .Port }} <br> 
+			<b>Info</b> = <br>
+			<textarea type="text" name="info" rows="5" cols="30">{{ .Info }}</textarea> <br>
 			<input type="submit" name="act" value="Set_Info">
 		</form>
 		<br>
