--- a/views/index.html
+++ b/views/index.html
@@ -18,16 +18,18 @@
 		<main>
 			<p>
 				<a href="/">Home</a> | 
-				<a href="/profile">Profile</a> | 
+				<a href="/profile/">Profile</a> | 
+				<a href="/archive/">Archive</a> | 
 				<a href="/network/">Network</a> |
-				<a href="/archive">Archive</a>
+				<a href="/network/email/">Email</a> |
+				<a href="/about/">About</a>
 				{{ block "content" . }}
 				{{ end }}
 			</p>
 		</main>
 		<hr>
 		<footer>
-			<p> CNINET - Open Source Project </p>
+			<p> [ CNINET ] </p>
 		</footer>
 	</body>
 </html>
