--- a/views/about.html
+++ b/views/about.html
@@ -3,9 +3,18 @@
 {{ end }}
 
 {{ define "content" }}
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<i>About</i>
+		</p>
+	</div>
 	<hr>
+	<br>
+	<div class="content">
 	<p>
 		<a href="https://github.com/Number571/CNINET">CNINET</a> - Network source code. <br> 
 		<a href="https://github.com/Number571">Number571</a> - Network Creator. <br>
 	</p>
+	</div>
 {{ end }}
