--- a/views/network_chat.html
+++ b/views/network_chat.html
@@ -3,29 +3,27 @@
 {{ end }}
 
 {{ define "content" }}
-	<hr>
-	Node: {{ .TempConnect }} <br>
-	<div id="container">
-		<b>
-			<a href="/network/profile/{{ .TempConnect }}">Profile</a> | 
-			<a href="/network/archive/{{ .TempConnect }}">Archive</a> | 
-			<a href="/network/email/read/{{ .TempConnect }}">Email</a> | 
-		</b>
-
-		<form method="POST" action="/network/">
-			<input type="hidden" name="addr" value="{{ .TempConnect }}">
-			<input type="submit" name="delete" value="Delete">
-		</form>
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<a href="/network/">Network</a> /
+			<i>Chat</i>
+		</p>
 	</div>
-
 	<hr>
-
-	<form method="POST" action="/network/chat/{{ .TempConnect}}">
-		<input type="submit" name="delete_message" value="Delete messages"> <br>
-		<textarea readonly rows="10" cols="45">
-{{ range .Messages }}{{ . }}{{ end }}
-		</textarea> <br>
-		<input type="text" name="text" placeholder="Message...">
-		<input type="submit" name="send_message" value="Send message">
-	</form>
+	<br>
+	<div class="content">
+	<p>|> <b><a href="/network/chat/global/">Global chat</a></b></p>
+	<br>
+	<p>
+	{{ if .Connections }}
+		<b>Connections</b> = 
+		{{ range .Connections }}
+			<br>| <a href="/network/chat/{{ . }}">{{ . }}</a>
+		{{ end }}
+	{{ else }}
+		Nothing
+	{{ end }}
+	</p>
+	</div>
 {{ end }}
