--- a/views/network_email_read_X.html
+++ b/views/network_email_read_X.html
@@ -3,27 +3,41 @@
 {{ end }}
 
 {{ define "content" }}
+    <div class="div_bread wrapper">
+        <p class="bread"> /
+            <a href="/">Home</a> /
+            <a href="/network/">Network</a> /
+            <a href="/network/email/">Email</a> /
+            <a href="/network/email/read/">Read</a> /
+            {{ if .Emails }}
+                {{ $data := index .Emails 0 }}
+                <i>{{ $data.User }}</i>
+            {{ else }}
+                None
+            {{ end}}
+        </p>
+    </div>
     <hr>
-    <b>
-        <a href="/network/email/read/">Back to Read</a>
-        <hr>
-    </b>
+    <br>
+    <div class="content">
     {{ if .Emails }}
         <table border="1" width="100%" cellpadding="5">
             <tr>
-                <th>Title</th>
-                <th>Date</th>
-                <th>Delete</th>
+                <th><p>Title</p></th>
+                <th><p>Date</p></th>
+                <th><p>Delete</p></th>
             </tr>
             {{ range .Emails }}
                 <tr>
                     <td><a href="/network/email/read/{{ .User }}/{{ .Id }}">{{ .Title }}</a></td>
-                    <td>{{ .Date }}</td>
+                    <td><p>{{ .Date }}</p></td>
                     <td>
+                        <p>
                         <form method="POST" action="/network/email/read/">
                             <input type="hidden" name="id" value="{{ .Id }}">
                             <input type="submit" name="delete" value="Delete">
                         </form>
+                        </p>
                     </td>
                 </tr>
             {{ end }}
@@ -31,4 +45,5 @@
     {{ else }}
         No messages!
     {{ end }}
+    </div>
 {{ end }}
