--- a/views/page404.html
+++ b/views/page404.html
@@ -3,6 +3,15 @@
 {{ end }}
 
 {{ define "content" }}
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<i>Page 404</i>
+		</p>
+	</div>
 	<hr>
+	<br>
+	<div class="content">
 	<p>Ooops <b>404</b> page ...</p>
+	</div>
 {{ end }}
