--- a/views/network.html
+++ b/views/network.html
@@ -3,28 +3,37 @@
 {{ end }}
 
 {{ define "content" }}
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<i>Network</i>
+		</p>
+	</div>
 	<hr>
+	<br>
+	<div class="content">
 	<b>
-		<a href="/network/chat/global/">Global chat</a> | 
-		<a href="/network/email/">Email page</a>
+		<a href="/network/profile/">Profiles</a> | 
+		<a href="/network/archive/">Archives</a> | 
+		<a href="/network/email/">Email</a> | 
+		<a href="/network/chat/">Chat</a>
 	</b>
-	<hr> 
-
 	<form method="POST" action="/network/">
 		<input type="text" name="addr" placeholder="127.0.0.1:7545" value="">
 		<input type="submit" name="add" value="Add">
 		<input type="submit" name="delete" value="Delete">
 	</form>
-
-	<br>
-	
-	<b>Connections</b> = 
-	{{ if not .Connections }}
-		None 
-	{{ else }}
-		{{ range .Connections }}
-			<br>| <a name="{{ . }}" href="/network/chat/{{ . }}">{{ . }}</a>
-		{{ end }}
-	{{ end }}
+	<p>
+		Connections = <br>
+			{{ if .Connections}}
+				{{ range .Connections }}
+					<a href="/network/profile/{{ . }}">{{ . }}</a><br>
+				{{ end }}
+			{{ else}}
+				None
+			{{end}}
 	</p>
+
+	</div>
+	
 {{ end }}
