--- a/views/network_chat_global.html
+++ b/views/network_chat_global.html
@@ -3,15 +3,23 @@
 {{ end }}
 
 {{ define "content" }}
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<a href="/network/">Network</a> /
+			<a href="/network/chat/">Chat</a> /
+			<i>Global</i>
+		</p>
+	</div>
 	<hr>
+	<br>
+	<div class="content">
+	
+	<textarea readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
 	<form method="POST" accept="/network/chat/global/">
-		<input type="submit" name="delete" value="Delete messages">
+		<input class="input_size" type="text" name="text" placeholder="Send message...">
+		<input autofocus type="submit" name="send_message" value="Send message">
+		<input type="submit" name="delete_message" value="Delete messages">
 	</form>
-	<textarea readonly rows="10" cols="45">
-{{ range .Messages }}{{ . }}{{ end }}
-	</textarea>
-	<form method="POST" accept="/network/chat/global/">
-		<input type="text" name="text" placeholder="Send message...">
-		<input type="submit" name="send" value="Send message">
-	</form>
+	</div>
 {{ end }}
