--- a/views/network_email.html
+++ b/views/network_email.html
@@ -3,10 +3,19 @@
 {{ end }}
 
 {{ define "content" }}
+	<div class="div_bread wrapper">
+		<p class="bread"> /
+			<a href="/">Home</a> /
+			<a href="/network/">Network</a> /
+			<i>Email</i>
+		</p>
+	</div>
 	<hr>
+	<br>
+	<div class="content">
 	<b>
-		<a href="/network/email/read/">Read Email</a> | 
-		<a href="/network/email/write/">Write Email</a> | 
-		<a href="/network/">Back</a>
+		<a href="/network/email/write/">Write Email</a> |
+		<a href="/network/email/read/">Read Email</a> 
 	</b>
+	</div>
 {{ end }}
