--- a/views/about.html
+++ b/views/about.html
@@ -1,20 +1,27 @@
 {{ define "title" }}
-	About
+    About
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
-			<a href="/">Home</a> /
-			<i>About</i>
-		</p>
-	</div>
-	<hr>
-	<br>
-	<div class="content">
-	<p>
-		<a href="https://github.com/Number571/CNINET">CNINET</a> - Network source code. <br> 
-		<a href="https://github.com/Number571">Number571</a> - Network Creator. <br>
-	</p>
-	</div>
+    <div class="div_bread wrapper">
+        <p class="bread"> /
+            <a href="/">Home</a> /
+            <i>About</i>
+        </p>
+    </div>
+    <hr>
+    <br>
+    <div class="content">
+    <p>
+        HiddenLake: <br>
+        - Based on p2p network. <br>
+        - Implemented end-to-end encryption. <br>
+        - Symmetric algorithm = AES256-CBC. <br>
+        - Asymmetric algorithm = RSA2048-OAEP. <br>
+        <br>
+
+        <a href="https://github.com/Number571/HiddenLake">HiddenLake</a> - Network source code. <br> 
+        <a href="https://github.com/Number571">Number571</a> - Network creator. <br>
+    </p>
+    </div>
 {{ end }}
