--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ html, body {
 
 body {
     background-color: rgb(32, 32, 32);
-    background-image: url(/static/image/background.jpg);
+    background-image: url(/static/img/background.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position:center center;
@@ -28,7 +28,7 @@ body {
     top: 0;
     bottom: 0;
     width: 100%;
-    background: url(/static/image/animation.gif);
+    background: url(/static/img/animation.gif);
     opacity: 0.2;
     content: "";
     z-index: -1;
