--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>
-            [CNINET] - 
             {{ block "title" . }}
                 Home
             {{ end }}
@@ -16,7 +15,7 @@
             <header>
                 <div id="head_title" class="wrapper">
                     <p>
-                        Cryptographic Non-Indexable Network
+                        Hidden Lake Network
                     </p>
                 </div>
                 <div id="navigate" class="wrapper">
@@ -50,7 +49,7 @@
             <footer>
                 <div class="wrapper">
                     <p class="block_left"> 
-                        [ CNINET ] 
+                        [ HiddenLake ] 
                     </p>
                 </div>
             </footer>
