--- a/views/network_archive.html
+++ b/views/network_archive.html
@@ -13,13 +13,15 @@
 	<hr>
 	<br>
 	<div class="content">
-	{{ if .Connections }}
-		<b>Connections</b> = 
-		{{ range .Connections }}
-			<br>| <a href="/network/archive/{{ . }}">{{ . }}</a>
+	<p>
+		{{ if .Connections }}
+			<b>Connections</b> = 
+			{{ range .Connections }}
+				<br>| <a href="/network/archive/{{ . }}">{{ . }}</a>
+			{{ end }}
+		{{ else }}
+			Nothing
 		{{ end }}
-	{{ else }}
-		<p>Nothing</p>
-	{{ end }}
+	</p>
 	</div>
 {{ end }}
