--- a/views/network.html
+++ b/views/network.html
@@ -5,7 +5,6 @@
 {{ define "content" }}
 	<div class="div_bread wrapper">
 		<p class="bread"> /
-			<a href="/">Home</a> /
 			<i>Network</i>
 		</p>
 	</div>
@@ -14,9 +13,9 @@
 	<div class="content">
 	<b>
 		<a href="/network/profile/">Profiles</a> | 
-		<a href="/network/archive/">Archives</a> | 
+		<a href="/network/chat/">Chat</a> |
 		<a href="/network/email/">Email</a> | 
-		<a href="/network/chat/">Chat</a>
+		<a href="/network/archive/">Archives</a> | 
 	</b>
 	<form method="POST" action="/network/">
 		<input type="text" name="addr" placeholder="127.0.0.1:7545" value="">
