--- a/views/network_email.html
+++ b/views/network_email.html
@@ -5,7 +5,6 @@
 {{ define "content" }}
 	<div class="div_bread wrapper">
 		<p class="bread"> /
-			<a href="/">Home</a> /
 			<a href="/network/">Network</a> /
 			<i>Email</i>
 		</p>
@@ -14,7 +13,7 @@
 	<br>
 	<div class="content">
 	<b>
-		<a href="/network/email/write/">Write Email</a> |
+		<a href="/network/email/write">Write Email</a> |
 		<a href="/network/email/read/">Read Email</a> 
 	</b>
 	</div>
