--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,6 @@
 {{ define "content" }}
     <div class="div_bread wrapper">
         <p class="bread"> /
-            <a href="/">Home</a> /
             <i>About</i>
         </p>
     </div>
@@ -18,6 +17,7 @@
         - Implemented end-to-end encryption. <br>
         - Symmetric algorithm = AES256-CBC. <br>
         - Asymmetric algorithm = RSA2048-OAEP. <br>
+        - Cryptographic Hash function = SHA256. <br>
         <br>
 
         <a href="https://github.com/Number571/HiddenLake">HiddenLake</a> - Network source code. <br> 
