--- a/views/about.html
+++ b/views/about.html
@@ -14,12 +14,12 @@
     <p>
         HiddenLake: <br>
         - Based on p2p network. <br>
+        - Implemented onion routing. <br>
         - Implemented end-to-end encryption. <br>
         - Symmetric algorithm = AES256-CBC. <br>
         - Asymmetric algorithm = RSA2048-OAEP. <br>
-        - Cryptographic Hash function = SHA256. <br>
+        - Cryptographic Hash functions = MD5/SHA256. <br>
         <br>
-
         <a href="https://github.com/Number571/HiddenLake">HiddenLake</a> - Network source code. <br> 
         <a href="https://github.com/Number571">Number571</a> - Network creator. <br>
     </p>
